css/groove_display.css
	/* this is for debugging layout issues - puts a read border around everything */
	/* body * { border: 1px solid red; }		 */
	body {
		
	}
	.warnings {
		font-family: monospace;
		display: none;
	}
	@media print {
		body {margin:0; padding:0; border:0}
		div.newpage {page-break-before: always}
		div.nobrk {page-break-inside: avoid}
	}
	.Printable {
		display: block;
	}
	.nonPrintable {
		display: block;
	}
	
	/* there is another .svgTarget definitiion in groove_writer.css */
	.svgTarget {
	}
	
	#midiPlayer {
		background-color: #2484c0;

	}
	.playerControl {
		display: inline-block;
		background-color: #2484c0;
		width: 100%;  /* expand to the surounding element */
	}
	.playerControl.large {
		width: 866px;
		border: 1px solid #009;
	}
	.playerControl.small {
		width: 100px;
		border: 1px solid #009;
	}

	.playerControlsRow {
		/border: 1px solid red;
		display: flex;
		display: -webkit-flex;
		flex-flow: flex-start;
		flex-wrap: nowrap;
	}
	.midiPlayImage, .midiRepeatImage {
		width: 40px;
		height: 40px;
		cursor: pointer;
		flex: none;
		margin: 4px 10px 0px 10px;
		border: 0px solid #000;
		background: #68c2ff;
		color: #005483;
		font-size: 20px;
		font-family: FontAwesome;
		border-radius: 50%;
		text-align: center;
		line-height: 40px;
		vertical-align: middle;
	}
	.midiPlayImage:hover, .midiRepeatImage:hover {
		color: #68c2ff;
		background: #005483;
		
	}
	.midiPlayImage.Stopped:before ,  .midiPlayImage.Paused:before   { 
	 	letter-spacing: -3px; 
		content: "\f04b";
	} 
	.midiPlayImage.Playing:before  { 
		content: "\f04c"; 
	} 
	.midiExpandImage {
		width: 40px;
		height: 40px;
		cursor: pointer;
		color: #68C2FF;
		margin-top: 8px;  
		margin-right: 0px;
		flex: none;
		letter-spacing: -3px; 
		font-size: 30px;
		font-family: FontAwesome;
	}
	.midiExpandImage:hover {
		color: #005483;
	}
	.midiExpandImage.small:before   { 
	 	letter-spacing: -3px; 
		content: "\f065";
	} 
	.midiExpandImage.large:before   { 
	 	letter-spacing: -3px; 
		content: "\f066";
	} 
	.tempoAndProgress {
		padding-top: 2px;
		width: 100%;
		height: 46px;
		flex: 4;
	}
	.tempoAndProgress.small {
			display: none;
	}
	.tempoRow, .swingRow {
		/border: 1px solid red;
		display: flex;
		display: -webkit-flex;
		height: 22px;
		flex-flow: flex-start;
		flex-wrap: nowrap;
	}
	.tempoInput, .swingInput {
		background-color: 3f91e5;
		padding: 0px;
		margin-top: 4px;
		margin-right: 2%;
		color: #66c0fe;
		width: 90%;
		flex: 1;
		-webkit-flex: 1;
	}
	.tempoSettings {
		color: #FFF;
	}
	.tempoLabel, .swingLabel {
		text-align: right;
		padding-top: 0px;
		font-size: 16px;
		width: 60px;
		color: #66c0fe;
	}
	.tempoOutput, .swingOutput {
		display: inline-block;
		text-align: left;
		padding-top: 0px;
		font-size: 16px;
		color: #0cdef9;
		padding-left: 8px;
		width: 34px;
		flex:none;
	}
	.swingSettings {
		color: #FFF;
	}
	.MIDIProgressRow {
		display: none;
	}
	.MIDIProgressRow.large {
		display: block;
		margin-left: 60px;
		display: flex;
		display: -webkit-flex;
		flex-flow: flex-start;
		flex-wrap: nowrap;
		white-space: nowrap;
		height: 20px;
	}
	.MIDIProgressRow.small {
		display: block;
		margin-left: 8px;
		padding: 0px;
	}
	.MIDIPlayTime {
		display: inline-block;
		width: 130px;
		color: #66c0fe;
		font-size: 30px;
		padding-top: 4px;
		text-align: left;
		flex: none;
	}
	.MIDIPlayTime.small {
		display: none;
	}
	.MIDIProgress {
		width: 85%;
		height: 8px;
		font-size: 0px;
	}
	.MIDIProgress.small {
		width: 80px;
	}
	.MIDIProgress.large {
		margin-top: 3px;
	}
	
	#ABCSource {
		font-family: monospace; 
		font-size: 14px;
	}
	
	button {
		cursor: pointer;
	}
	
	.abcr {  /* rectangles enclosing notes in ABC SVG */
		fill: transparent; 
		fill-opactity: 0.25;
	}
	.abcr.highlighted {
		fill:#990000; 
		fill-opacity: 0.25;
	}
 	
input[type=range] {
  -webkit-appearance: none;
  width: 100%;
  background-color: #2484c0;
}
input[type=range]:focus {
  outline: none;
}
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  background: #005789;
  border-radius: 6px;
  border: 0px solid #010101;
}
input[type=range]::-webkit-slider-thumb {
  border: 1px solid #005789;
  height: 18px;
  width: 18px;
  border-radius: 20px;
  background: #49b4f8;
  cursor: pointer;
  -webkit-appearance: none;
  margin-top: -6px;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #0067a3;
}
input[type=range]::-moz-range-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  background: #005789;
  border-radius: 6px;
  border: 0px solid #010101;
}
input[type=range]::-moz-range-thumb {
  border: 1px solid #005789;
  height: 18px;
  width: 18px;
  border-radius: 20px;
  background: #49b4f8;
  cursor: pointer;
}
input[type=range]::-ms-track {
  width: 100%;
  height: 8.4px;
  cursor: pointer;
  background: transparent;
  border-color: transparent;
  color: transparent;
}
input[type=range]::-ms-fill-lower {
  background: #49b4f8;
  border: 0px solid #010101;
  border-radius: 2.6px;
}
input[type=range]::-ms-fill-upper {
  background: #005789;
  border: 0px solid #010101;
  border-radius: 6px;
}
input[type=range]::-ms-thumb {
  border: 1px solid #005789;
  height: 18px;
  width: 18px;
  border-radius: 20px;
  background: #49b4f8;
  cursor: pointer;
}
input[type=range]:active::-moz-range-thumb {
	background: #fff;
}
input[type=range]:active::-webkit-slider-thumb {
	background: #fff;
}

